Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
               </div>
               <div>
                 <strong>GitHub</strong>
-                <a href="https://github.com/alfaz" target="_blank">github.com/alfaz8181</a>
+                <a href="https://github.com/alfaz8181" target="_blank">github.com/alfaz8181</a>
               </div>
             </div>
             <div class="contact-card">
@@ -613,7 +613,7 @@
           <a href="#contact">Contact</a>
         </nav>
         <p class="footer-copy">
-          © 2024 Alfaz Kaladagi. Made with <span class="heart">❤️</span> by Alfaz
+          © 2026 Alfaz Kaladagi. Made with <span class="heart">❤️</span> by Alfaz
         </p>
       </div>
     </div>
@@ -635,4 +635,5 @@
 </script>
 
 </body>
+
 </html>
