--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <!-- About Content -->
         <div class="about-content scroll-reveal">
-          <h3 class="about-name">Hi, I'm Alfaz 👋</h3>
+          <h3 class="about-name">Hi, I'm Alfaz </h3>
           <p class="about-text">
             I'm a <strong>BTech Computer Science and Engineering student</strong> with a passion for turning ideas into interactive, visually stunning web experiences. I started my coding journey with curiosity and a love for building things that actually work.
           </p>
@@ -641,4 +641,5 @@
 </body>
 
 </html>
+
 
