FIXED LIKINDIN ID

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
               </div>
               <div>
                 <strong>LinkedIn</strong>
-                <a href="https://linkedin.com/in/alfaz" target="_blank">linkedin.com/in/alfaz</a>
+                <a href="https://www.linkedin.com/in/alfaz-kaladagi-aa955b305/" target="_blank">linkedin.com/in/alfaz</a>
               </div>
             </div>
           </div>
@@ -641,6 +641,7 @@
 </body>
 
 </html>
+
 
 
 
