Fixed the mail problem

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               </div>
               <div>
                 <strong>Email</strong>
-                <a href="mailto:alfaz@email.com">alfaz.info81@email.com</a>
+                <a href="mailto:alfaz@gmail.com">alfaz.info81@gmail.com</a>
               </div>
             </div>
             <div class="contact-card">
@@ -641,6 +641,7 @@
 </body>
 
 </html>
+
 
 
 
