--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
               </div>
               <div>
                 <strong>Email</strong>
-                <a href="mailto:alfaz@gmail.com">alfaz.info81@gmail.com</a>
+                <a href="mailto:alfaz.info81@gmail.com">alfaz.info81@gmail.com</a>
               </div>
             </div>
             <div class="contact-card">
@@ -563,7 +563,7 @@
             <a href="https://www.linkedin.com/in/alfaz-kaladagi-aa955b305/" target="_blank" class="social-btn social-btn-linkedin ripple" aria-label="LinkedIn">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
             </a>
-            <a href="mailto:alfaz.info81@email.com" class="social-btn social-btn-email ripple" aria-label="Email">
+            <a href="mailto:alfaz.info81@gmail.com" class="social-btn social-btn-email ripple" aria-label="Email">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
             </a>
           </div>
@@ -641,6 +641,7 @@
 </body>
 
 </html>
+
 
 
 
